--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,18 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowNoTitle">true</item>
+
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.SewingMachine.NoActionBar">
+
+
+    </style>
+
+
 </resources>
