--- a/app/src/main/res/layout/activity_start_embroid.xml
+++ b/app/src/main/res/layout/activity_start_embroid.xml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StartEmbroidActivity">
+    android:orientation="vertical"
+    android:weightSum="1280"
+    >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="자수 시작하기 페이지"></TextView>
+        android:layout_height="0dp"
+        android:layout_weight="427.3"
+        android:gravity="center">
+
+        <!-- 미니맵 -->
+        <ImageView
+            android:id="@+id/mini_map"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"/>
+
+    </LinearLayout>
+
+    <!-- 캔버스 -->
+    <ScrollView
+        android:id="@+id/pll1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="624"
+        android:layout_marginBottom="230dp"
+        android:layout_marginHorizontal="48dp">
+
+        <HorizontalScrollView
+            android:id="@+id/pll2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/paper_linear_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/darker_gray"
+                android:orientation="vertical">
+
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+                <include layout="@layout/paper_line" />
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+    </ScrollView>
+
+    <!-- 팔레트 -->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="140">
+
+        <include layout="@layout/canvas" />
+
+    </HorizontalScrollView>
 
 </LinearLayout>
