--- a/app/src/main/res/layout/sewing_recyclerview_ltem.xml
+++ b/app/src/main/res/layout/sewing_recyclerview_ltem.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ImageView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pixel_card"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:cardCornerRadius="10dp"
+        android:layout_margin="9dp"
+        android:elevation="2dp">
+
+        <ImageView
+            android:id="@+id/pixel_thumb"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"/>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
