--- a/app/src/main/res/layout/paper_line.xml
+++ b/app/src/main/res/layout/paper_line.xml
@@ -15,4 +15,11 @@
     <TextView style="@style/Pixel" />
     <TextView style="@style/Pixel" />
 
+    <TextView style="@style/Pixel" />
+    <TextView style="@style/Pixel" />
+    <TextView style="@style/Pixel" />
+    <TextView style="@style/Pixel" />
+
+    <TextView style="@style/Pixel" />
+
 </LinearLayout>
