--- a/app/src/main/res/drawable/palette_circle.xml
+++ b/app/src/main/res/drawable/palette_circle.xml
@@ -3,6 +3,9 @@
     android:shape="oval">
     <solid android:color="@color/white" />
 
+    <stroke android:width="1dp"
+        android:color="@color/white" />
+
     <size
         android:width="40dp"
         android:height="40dp" />
