--- a/app/src/main/res/layout/activity_start_embroid.xml
+++ b/app/src/main/res/layout/activity_start_embroid.xml
@@ -30,12 +30,39 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="60"
-            android:background="@drawable/back_btn"></androidx.appcompat.widget.AppCompatButton>
+            android:background="@drawable/back_btn">
+        </androidx.appcompat.widget.AppCompatButton>
 
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="624"></View>
+            android:layout_weight="392"></View>
+
+        <ImageButton
+            android:id="@+id/factory_reset"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="88"
+            android:layout_gravity="center"
+            android:background="@drawable/factory_reset" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="40"></View>
+
+        <ImageButton
+            android:id="@+id/save_btn"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="56"
+            android:layout_gravity="center"
+            android:background="@drawable/setting_save_btn" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="48"></View>
 
     </LinearLayout>
 
@@ -50,20 +77,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:weightSum="720"
         android:layout_weight="337">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="248"/>
 
         <!-- 미니맵 -->
         <ImageView
             android:id="@+id/mini_map"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="224"
+            android:layout_gravity="center" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="110"/>
 
         <LinearLayout
-            android:id="@+id/palette_linear_layout"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@drawable/black"
-            android:orientation="horizontal" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="248"
+            android:weightSum="224"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="150"/>
+
+            <LinearLayout
+                android:id="@+id/palette_linear_layout"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:background="@drawable/black"
+                android:orientation="horizontal" />
+        </LinearLayout>
 
     </LinearLayout>
 
