layout setting  화면 수정

--- a/app/src/main/res/drawable/seekbar.xml
+++ b/app/src/main/res/drawable/seekbar.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/background"
-        android:drawable="@drawable/seekbar_seekbar"></item>
-    <item>
-        <scale
-            android:drawable="@drawable/seekbar_seekbar"
-            android:scaleHeight="10%"
-            android:scaleWidth="100%"
-            ></scale>
-    </item>
+        android:drawable="@drawable/seekbar_track"></item>
+
+    <item
+        android:id="@+id/progress"
+        android:drawable="@drawable/seekbar_progress"></item>
 
 </layer-list>
