--- a/app/src/main/res/drawable/seekbar_seekbar.xml
+++ b/app/src/main/res/drawable/seekbar_seekbar.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item >
-        <shape android:shape="rectangle">
-            <corners android:radius="10dp"/>
-            <solid android:color="#009dc7"/>
-            <stroke android:color="#fff" android:width="4dp"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--시크바 배경-->
+    <item android:id="@android:id/background">
+        <shape android:shape="line">    <!--선 : 길이6dp -->
+            <stroke android:width="5dp" android:color="#ebebeb" />
+            <corners android:radius="20dp"></corners>
         </shape>
     </item>
 
+    <!-- 시크바 배경2 -->
 
+    <!-- 시크바 프로그래스 -->
+    <item android:id="@android:id/progress" >
+        <clip>
+            <shape android:shape="line">
+                <stroke android:width="5dp" android:color="#009dc7" />
+                <corners android:radius="20dp"></corners>
+            </shape>
+        </clip>
+    </item>
 
-</selector>
+</layer-list>
