--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="476"
-            android:id="@+id/viewPager">
+            android:id="@+id/viewPager"
+            android:scrollbars="horizontal">
 
         </androidx.viewpager.widget.ViewPager>
 
@@ -35,19 +36,16 @@
             android:layout_height="match_parent"
             android:layout_weight="310"></View>
 
-        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
-            android:id="@+id/spring_dots_indicator"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="80"
-            app:dampingRatio="0.5"
-            app:dotsColor="@color/purple_500"
-            app:dotsStrokeColor="@color/white"
-            app:dotsCornerRadius="2dp"
+        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
+            android:id="@+id/worm_dots_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:dotsColor="#9f9f9f"
+            app:dotsStrokeColor="@color/ad_color"
+            app:dotsCornerRadius="8dp"
             app:dotsSize="16dp"
-            app:dotsSpacing="6dp"
+            app:dotsSpacing="4dp"
             app:dotsStrokeWidth="2dp"
-            app:stiffness="300"
             />
 
 
