--- a/app/src/main/res/layout/sewing_item_list.xml
+++ b/app/src/main/res/layout/sewing_item_list.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/start_sewing"></androidx.appcompat.widget.AppCompatImageView>
+        android:layout_height="match_parent"></ImageView>
 
 </LinearLayout>
