1. '뉴-자수' - 지우개, 초기화 구현 2. 자수 세이브, 로드 구현

--- a/app/src/main/res/layout/canvas.xml
+++ b/app/src/main/res/layout/canvas.xml
@@ -7,6 +7,12 @@
     android:orientation="horizontal">
 
     <Button
+        android:id="@+id/color_button_erase"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="6dp" style= "@style/ColorButton"
+        android:background="@drawable/erase" />
+
+    <Button
         android:id="@+id/color_button_white"
                 android:layout_marginVertical="15dp"
         android:layout_marginHorizontal="6dp" style= "@style/ColorButton"
