--- a/app/src/main/res/layout/sewing_recyclerview_ltem.xml
+++ b/app/src/main/res/layout/sewing_recyclerview_ltem.xml
@@ -5,11 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/pixel_card"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        app:cardCornerRadius="10dp"
         android:layout_margin="9dp"
         android:elevation="2dp">
 
@@ -20,6 +19,6 @@
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"/>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
