1. 지우개색, 지우개 초기화 구현 2. 프리셋 픽셀 재조정 3. 프리셋 초기화 (1회로 수정) 4. 격자 문제 해결

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="black">#000000</color>      <!-- RGB: 0   | 0   | 0   -->
     <color name="grey">#BDBDBD</color>       <!-- RGB: 128 | 128 | 128 -->
     <color name="white">#ffffff</color>      <!-- RGB: 255 | 255 | 255 -->
+    <color name="erase">#FBFBFB</color>      <!-- RGB: 255 | 255 | 255 -->
 
     <!-- 50% LUMINESCENCE -->
     <color name="red">#ff0000</color>        <!-- RGB: 255 | 0   | 0   \/\/ HSL: 0   | 240 | 120 -->
