--- a/app/src/main/res/layout/activity_start_embroid.xml
+++ b/app/src/main/res/layout/activity_start_embroid.xml
@@ -132,15 +132,14 @@
             android:layout_height="match_parent"
             android:layout_weight="48"></View>
 
-            <!-- 캔버스 -->
+        <!-- 캔버스 -->
         <ScrollView
             android:id="@+id/pll1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@drawable/scroll_view_border"
-            android:padding="2dp"
-            android:layout_weight="624"
-           >
+            android:padding="1dp"
+            android:layout_weight="624">
 
             <HorizontalScrollView
                 android:id="@+id/pll2"
